website/i18n/ja/docusaurus-plugin-content-docs/version-0.0.28/entry/memories.md
---
title: Memories タブ (メモリ)
sidebar_position: 8
description: メモリグラフの検査、メモリのプレビュー、編集、アーカイブを行います。
---

import RiskCallout from '@site/src/components/RiskCallout';

# Memories タブ

Memories タブは、保存されたメモリ同士のグラフ構造を分析し、個別の維持管理タスクを実行します。

## スコープチップ (Scope chips)

メモリソース基準グラフフィルターを使用して、ワークスペース用のメモリとグローバル用のメモリを比較します。グラフ構造が非常に複雑で視覚的にわかりにくい場合は、現在のワークスペースのみの条件から始めてください。

## タイプチップ (Type chips)

ルール、スキル、または一般知識など、メモリタイプごとにフィルターして詳細にスキャンします。

## 意味論的リンクの切り替え

意味論的なつながりを示すグラフのエッジを表示または非表示にします。構造が非常に複雑に絡み合っている場合は、トグルをオフにしてください。

## リロード / 再構築

手動での編集、インポート、アーカイブ、または設定変更を行った後は、グラフデータをリロードするか再構築してください。

## メモリ内容のプレビュー

選択された個別のメモリ本文テキストを読み込み、エージェントが実際に受け取る最終的な形式を事前に監査できます。

<RiskCallout level="caution">
機密性の高いローカルコンテンツがブラウザに表示される場合があります。プレビューを使用する際は、画面のセキュリティに注意してください。
</RiskCallout>

## メモリの編集

該当の Markdown ファイルをエディタで開き、パスをコピーします。手動での修正や確認に使用します。元のファイルは常にローカルの Markdown ファイルです。

## メモリのアーカイブ (保管処理)

メモリをランタイムのルーティングから除外しますが、物理的に削除するのではなく `archive/` 下にアカイビング保存します。履歴監査を容易にするため、削除ではなくアーカイブを使用してください。

<RiskCallout level="caution">
アーカイブを行うと、すぐにルーティングが変更されます。履歴を保護するため、手動による削除ではなくアーカイブを使用してください。
</RiskCallout>

## CLI 等価コマンド

```bash
engram graph "<topic>"
engram quality-check
engram archive --reason "<why>" <id-or-file>
```

## 次のステップ

- [Core タブ](core.md)
- [Runtime タブ](runtime.md)

<!-- evidence-foundation:v3:start -->
## 証拠に基づくメモリ

New files use `schema_version: 3`. Rule and skill memories default to `authority: instruction`; knowledge defaults to `authority: reference`. `revision` starts at 1 and increments on updates. Trace IDs belong in `evidence_refs`, while session or source identities belong in `derived_from`. Legacy v1 (`Context` + `Content` + `Example`) and v2 (`Content`, optional `Origin`) remain readable. Traces live in `.agents/.engram/traces/` with `traces/<trace-id>.jsonl` files recording `engram observe --file` and `save-session --file` provenance, `trust_level`, `sensitivity`, and `retention`.
<!-- evidence-foundation:v3:end -->
